# news-trend-pipeline-dev

./: .dockerignore  .env.example  .gitignore  README.md  README_REFACTOR.md  docker-compose.kafka-health.yml  docker-compose.yml  pyproject.toml  todo.md
airflow/dags/: auto_replay_dag.py  compound_candidate_auto_review_dag.py  compound_dictionary_dag.py  compound_extraction_dag.py  compound_keyword_backfill_dag.py  compound_noun_extraction_dag.py  kafka_recovery_dag.py  keyword_event_detection_dag.py  news_ingest_dag.py  partition_maintenance_dag.py  rss_ingest_dag.py  stopword_recommender_dag.py
data/: rss_feeds.csv
db/migration/: README.md  V1__init_schema.sql  V2__pg_partman_setup.sql  V3__make_staging_tables_unlogged.sql  V4__drop_keyword_events_pkey.sql  V5__drop_unused_analytics_pkeys.sql
docs/: 2026-04-21 by ChatGpt 검토.md  DIRECTION.md  FULL_RESET_AND_REBOOTSTRAP_GUIDE.md  STEP1_DIRECTION_CHANGE.md  STEP1_KAFKA.md  STEP1_KAFKA_2.md  STEP1_RECOVERY.md  STEP2_PREPROCESSING.md  STEP2_PROCESSING_IMPLEMENTATION.md  STEP2_SPARK.md  STEP3_EVENT.md  STEP4_FastAPI_구현.md  STEP5_DASHBOARD.md  planned-api-gaps.md
docs/design/: STEP1-1_AIRFLOW.md  STEP1_AIRFLOW.md  STEP1_DIRECTION_CHANGE.md  STEP1_INGESTION.md  STEP1_KAFKA-2.md  STEP2-1_SPARK.md  STEP2-2_PREPROCESSING.md  STEP2-3_DICTIONARY.md  STEP2_DATABASE.md  (+17 more)
frontend/: index.html  package-lock.json
requirements/: requirements-ingestion.txt  requirements-spark.txt
scripts/: consumer_check.py  kafka_monitor.py  load_test.py  reset_full_rebootstrap.ps1  reset_keep_dictionary_rebootstrap.ps1  run_processing.py
(+167 files in other folders)
